--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -7,13 +7,86 @@
       "thumb": "",
       "link": "https://thalysonalexr.github.io/photospace/",
       "source": "https://github.com/thalysonalexr/photospace",
-      "description": "Projeto desenvolvido durante o Bacharel em SI. A proposta deste é ser um template funcional frontend para sites editores de fotos.",
+      "description": "Projeto desenvolvido durante o Bacharel em SI. A proposta deste é ser um template funcional frontend para websites editores de fotos.",
       "title": "Photospace",
       "spec": [
         { "description": "Desenvolvido com JQuery" },
         { "description": "Estilizado com CSS3" },
         { "description": "Utiliza tags HTML5" },
         { "description": "Font Awesome como ícones" }
+      ]
+    },
+    {
+      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/portfolio.png",
+      "thumb": "",
+      "link": "https://thalysonalexr.github.io/portfolio/",
+      "source": "https://github.com/thalysonalexr/portfolio",
+      "description": "Template para Portfolio de projetos de Desenvolvedor Web. Tem ênfase na simplicidade e objetividade.",
+      "title": "portforlio.me",
+      "spec": [
+        { "description": "Utiliza lib Materialize" },
+        { "description": "Desenvolvido com Vue.js" },
+        { "description": "Font Awesome como ícones" },
+        { "description": "Uso de Vuex para gerenciar estado" }
+      ]
+    },
+    {
+      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/criarcurriculo.png",
+      "thumb": "",
+      "link": "https://gitlab.com/thalysonrodss/curriculum.io",
+      "source": "https://gitlab.com/thalysonrodss/curriculum.io",
+      "description": "Website gerador de Currículos em PDF. Projeto realizado para cliente pela plataforma Workana.",
+      "title": "criarcurriculo.net",
+      "spec": [
+        { "description": "Utiliza Bootstrap" },
+        { "description": "Consome API PHP geradora de PDF" },
+        { "description": "Autenticação através de JWT" },
+        { "description": "Desenvolvido com Vue.js" }
+      ]
+    },
+    {
+      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/freestylesheets.png",
+      "thumb": "",
+      "link": "https://github.com/thalysonalexr/freestylesheets",
+      "source": "https://github.com/thalysonalexr/freestylesheets",
+      "description": "REST API com proposta de gerenciar dados de Folhas de Estilo Cascata (CSS). Inspirado em Google Fonts API.",
+      "title": "Freestylesheets API",
+      "spec": [
+        { "description": "Usa Zend Expressive Skeleton" },
+        { "description": "API 100% PHP" },
+        { "description": "Respostas JSON, XML, HTML e text/css" },
+        { "description": "Consome Middlewares PSR-15" },
+        { "description": "Desenvolvimento com Docker e Docker-compose" },
+        { "description": "Base de Dados MySQL" }
+      ]
+    },
+    {
+      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/cadtreesa.gif",
+      "thumb": "",
+      "link": "https://github.com/thalysonalexr/cadtreesa",
+      "source": "https://github.com/thalysonalexr/cadtreesa",
+      "description": "Projeto com a proposta de mapear árvores do Campus da UFR/MT. No projeto foi desenvolvido Website e um Aplicativo (Android).",
+      "title": "Cadtreesa Project",
+      "spec": [
+        { "description": "Aplicativo Android em Delphi" },
+        { "description": "Site criado em PHP, HTML5, CSS3, JS" },
+        { "description": "Utiliza as libs JQuery e Bootstrap" },
+        { "description": "Armazenamento de dados com MySQL" },
+        { "description": "Integração com Google Maps API" }
+      ]
+    },
+    {
+      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/stikers.png",
+      "thumb": "",
+      "link": "https://gitlab.com/thalysonrodss/swap-cards",
+      "source": "https://gitlab.com/thalysonrodss/swap-cards",
+      "description": "Website para troca de Figurinhas entre amigos. Projeto realizado para cliente pela plataforma Workana.",
+      "title": "Stikers",
+      "spec": [
+        { "description": "Utiliza Bootstrap" },
+        { "description": "Integra componente do Analytics" },
+        { "description": "Desenvolvido com JQuery" },
+        { "description": "Desenvolvido com Vue.js" }
       ]
     },
     {
@@ -42,53 +115,6 @@
         { "description": "Armazenamento de dados com Sqlite3" },
         { "description": "Interface nativa com a lib Tkinter" },
         { "description": "Implementação do Algoritmo MiniMax (vs IA)" }
-      ]
-    },
-    {
-      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/cadtreesa.gif",
-      "thumb": "",
-      "link": "https://github.com/thalysonalexr/cadtreesa",
-      "source": "https://github.com/thalysonalexr/cadtreesa",
-      "description": "Projeto com a proposta de mapear árvores do Campus da UFR/MT. Visualização dos dados por meio de site e gerenciamento através de Aplicação Android construída em Delphi.",
-      "title": "Cadtreesa Project",
-      "spec": [
-        { "description": "Aplicativo Android em Delphi" },
-        { "description": "Site criado em PHP, HTML5, CSS3, JS" },
-        { "description": "Utiliza as libs JQuery e Bootstrap" },
-        { "description": "Armazenamento de dados com MySQL" },
-        { "description": "Integração com Google Maps API" }
-      ]
-    },
-    {
-      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/freestylesheets.png",
-      "thumb": "",
-      "link": "https://github.com/thalysonalexr/freestylesheets",
-      "source": "https://github.com/thalysonalexr/freestylesheets",
-      "description": "REST API com proposta de gerenciar dados de Folhas de Estilo Cascata (CSS) entre aplicações que necessitem do uso. Inspirado em Google Fonts API.",
-      "title": "Freestylesheets API",
-      "spec": [
-        { "description": "Usa Zend Expressive Skeleton" },
-        { "description": "API 100% PHP" },
-        { "description": "Respostas JSON, XML, HTML e text/css" },
-        { "description": "Consome Middlewares PSR-15" },
-        { "description": "Desenvolvimento com Docker e Docker-compose" },
-        { "description": "Base de Dados MySQL" }
-      ]
-    },
-    {
-      "figure": "https://raw.githubusercontent.com/thalysonalexr/screenshot-projects/master/images/portfolio.png",
-      "thumb": "",
-      "link": "https://thalysonalexr.github.io/portfolio/",
-      "source": "https://github.com/thalysonalexr/portfolio",
-      "description": "REST API com proposta de gerenciar dados de Folhas de Estilo Cascata (CSS) entre aplicações que necessitem do uso. Inspirado em Google Fonts API.",
-      "title": "Freestylesheets API",
-      "spec": [
-        { "description": "Usa Zend Expressive Skeleton" },
-        { "description": "API 100% PHP" },
-        { "description": "Respostas JSON, XML, HTML e text/css" },
-        { "description": "Consome Middlewares PSR-15" },
-        { "description": "Desenvolvimento com Docker e Docker-compose" },
-        { "description": "Base de Dados MySQL" }
       ]
     }
   ]
